CSS bugfix: wrapped buttons

--- a/system/cms/themes/pyrocms/css/workless/workless.css
+++ b/system/cms/themes/pyrocms/css/workless/workless.css
@@ -513,6 +513,9 @@ table .actions a {
  * ---------------------------------- */
 
 /* Buttons */
+.buttons {
+	white-space: nowrap;
+}
 .btn {
   cursor: pointer;
   display: inline-block;
